--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/channel/UCjK3eJ0PHvL-XbuKMtAFmPQ" />
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@SpindleHorse" />
   </head>
   <body>
   </body>
